css/style.css
/* general */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

li{
    list-style: none;
}

ul li{
    color: grey;
    font-weight: 700;
}

body{
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
}

h2{
    color: white;
    font-size: 40px;
}

/* main */
main{
    height: calc(100vh - 80px);
    background-color: rgb(22, 27, 38);
    display: flex;
}

/* sidebar */
#sidebar{
    height: 100%;
    width: 300px;
    padding: 20px 20px 5px 20px;
    background-color: black;
}

.logo{
    width: 170px;
    padding-bottom: 30px;
}

/* personal */
.personal{
    padding-bottom: 30px;
}

.personal li img{
    width: 35px;
}

.personal li span{
    padding-left: 5px;
}

/* playlist */
.playlist h3{
    font-size: 20px;
    padding-bottom: 15px;
}

.btn-plus{
    padding-bottom: 20px;
}

.box-grey{
    background-color: grey;
    width: 40px;
    height: 40px;
}

.playlist ul li{
    padding-bottom: 20px;
}

/* bottom sidebar */
.bot-sidebar1{
    padding-bottom: 20px;
}

.bot-sidebar1 img{
    width: 30px;
    float: left;
}

.bot-sidebar1 span{
    font-size: 20px;
    padding-left: 15px;
    color: grey;
}

/* header */
header{
    position: sticky;
    height: 100px;
    background-color: rgb(15, 20, 34);
    top: 0;
}

.right{
    display: flex;
    justify-content: right;
    /* occhio al padding */
    padding: 25px 6px 0px 0px;
}

.btn-upgrade{
    width: 250px;
    border-radius: 20px;
    padding: 11px 0px;
    border: 1px solid white;
    background-color: transparent;
    text-align: center;
}

/* content */

.content{
    width: calc(100% - 300px);
    overflow-y: auto;
}

/* main-content */
.main-content{
    padding: 20px 20px;
}

.main-content h3{
    color: white;
    padding-bottom: 10px;
}

.main-content span{
    color: grey;
}

.categorie{
    padding-bottom: 40px;
}

.categorie ul{
    display: flex;
    justify-content: center;
    gap: 35px;
}

/* recently */
.recently{
    display: flex;
    justify-content: space-between;
    padding-bottom: 200px;
}

.box1{
    text-align: center;
}

/* creato per */
.creato-per{
    display: flex;
    padding-bottom: 200px;
    gap: 20px;
}

.box2{
    text-align: center;
}

/* popolari */
.popolari{
    display: flex;
    padding-bottom: 200px;
    gap: 20px;
}

/* footer */
footer{
    height: 80px;
    background-color: rgb(40, 40, 40);
    display: flex;
}

.col25{
    width: 25%;
    padding: 20px 0px 20px 15px;
    display: flex;
}

.col25 img{
    width: 50px;
    height: 50px;
}

.col-text{
    padding-left: 15px;
    padding-right: 60px;
}

.col-img{
    color: grey;
    font-size: 20px;
}

.col50{
    width: 50%;
    text-align: center;
}

.music-player{
    color: white;
}

.music-player .fa-solid{
    font-size: 20px;
    padding-right: 10px;
    padding-left: 10px;
    vertical-align: middle;
}

.music-player .fa-regular{
    font-size: 35px;
    padding: 10px 15px 10px 15px;
    vertical-align: middle;
}

.music-time{
    display: flex;
}

.music-line{
    width: 75%;
    height: 6px;
    border: 1px solid grey;
    border-radius: 10px;
    background-color: grey;
}

.volume-line{
    width: 170px;
    height: 6px;
    border: 1px solid grey;
    border-radius: 10px;
    background-color: grey;
}

/* utiliy */

.color-white{
    color: white;
}

.color-grey{
    color: grey;
}

.bold{
    font-weight: 600;
}

.disp-flex{
    display: flex;
}

.align-right{
    justify-content: end;
}

